build all freertos, not able to build net lwip due to lack of sio_open()

--- a/examples/device/cdc_msc_freertos/CMakeLists.txt
+++ b/examples/device/cdc_msc_freertos/CMakeLists.txt
@@ -17,8 +17,6 @@ endif()
 
 add_executable(${PROJECT})
 
-set(freertos_path ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/FreeRTOS-Kernel)
-
 # Example source
 target_sources(${PROJECT} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/freertos_hook.c
@@ -30,15 +28,16 @@ target_sources(${PROJECT} PUBLIC
 # Example include
 target_include_directories(${PROJECT} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src
-  ${freertos_path}/include
   )
 
 # Configure compilation flags and libraries for the example... see the corresponding function
 # in hw/bsp/FAMILY/family.cmake for details.
 family_configure_device_example(${PROJECT})
 
+if (NOT TARGET freertos_kernel)
 family_add_freertos_config(${PROJECT})
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/FreeRTOS-Kernel lib/FreeRTOS-Kernel)
+endif()
 
 target_link_libraries(${PROJECT} PUBLIC
   freertos_kernel
