update all device cmake example for imx

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,13 +35,13 @@ set(TINYUSB_TARGET "tinyusb")
 set(TINYUSB_CONFIG_TARGET "tinyusb_config")
 
 if (DEFINED TINYUSB_TARGET_PREFIX)
-  set(TINYUSB_TARGET "${TINYUSB_TARGET_PREFIX}_${TINYUSB_TARGET}")
-  set(TINYUSB_CONFIG_TARGET "${TINYUSB_TARGET_PREFIX}_${TINYUSB_CONFIG_TARGET}")
+  set(TINYUSB_TARGET "${TINYUSB_TARGET_PREFIX}${TINYUSB_TARGET}")
+  set(TINYUSB_CONFIG_TARGET "${TINYUSB_TARGET_PREFIX}${TINYUSB_CONFIG_TARGET}")
 endif ()
 
 if (DEFINED TINYUSB_TARGET_SUFFIX)
-  set(TINYUSB_TARGET "${TINYUSB_TARGET}_${TINYUSB_TARGET_SUFFIX}")
-  set(TINYUSB_CONFIG_TARGET "${TINYUSB_CONFIG_TARGET}_${TINYUSB_TARGET_SUFFIX}")
+  set(TINYUSB_TARGET "${TINYUSB_TARGET}${TINYUSB_TARGET_SUFFIX}")
+  set(TINYUSB_CONFIG_TARGET "${TINYUSB_CONFIG_TARGET}${TINYUSB_TARGET_SUFFIX}")
 endif ()
 
 add_library(${TINYUSB_TARGET} STATIC)
