--- a/.github/workflows/cmake_arm.yml
+++ b/.github/workflows/cmake_arm.yml
@@ -44,6 +44,9 @@ jobs:
       with:
         release: '11.2-2022.02'
 
+    - name: Install Ninja
+      run: apt install -y ninja-build
+
     - name: Checkout TinyUSB
       uses: actions/checkout@v3
 
