--- a/.github/workflows/build_arm.yml
+++ b/.github/workflows/build_arm.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Install ARM GCC
       uses: carlosperate/arm-none-eabi-gcc-action@v1
       with:
-        release: '11.2-2022.02'
+        release: '12.2.Rel1'
 
     - name: Checkout TinyUSB
       uses: actions/checkout@v3
