add freertosconfig for g0, add cmake stlink, add g0 to cmake ci

--- a/.github/workflows/cmake_arm.yml
+++ b/.github/workflows/cmake_arm.yml
@@ -37,6 +37,7 @@ jobs:
           - 'mcx'
           - 'imxrt'
           - 'rp2040'
+          - 'stm32g0'
     steps:
     - name: Setup Python
       uses: actions/setup-python@v4
