build g0 g4 iar cmake

--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -23,7 +23,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-arm:
+  makefile:
     runs-on: [self-hosted, Linux, X64, hifiphile]
     strategy:
       fail-fast: false
@@ -48,3 +48,29 @@ jobs:
 
     - name: Build
       run: python3 tools/build_family.py ${{ matrix.family }} CC=iccarm
+
+  cmake:
+    runs-on: [self-hosted, Linux, X64, hifiphile]
+    strategy:
+      fail-fast: false
+      matrix:
+        family:
+          # Alphabetical order
+          # Note: bundle multiple families into a matrix since there is only one self-hosted instance can
+          # run IAR build. Too many matrix can hurt due to setup/teardown overhead.
+          - 'stm32g0 stm32g4'
+    steps:
+      - name: Clean workspace
+        run: |
+          echo "Cleaning up previous run"
+          rm -rf "${{ github.workspace }}"
+          mkdir -p "${{ github.workspace }}"
+
+      - name: Checkout TinyUSB
+        uses: actions/checkout@v3
+
+      - name: Get Dependencies
+        run: python3 tools/get_deps.py ${{ matrix.family }}
+
+      - name: Build
+        run: python3 tools/build_family.py ${{ matrix.family }} -DTOOLCHAIN=iccarm
