add typec example to cmake

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,3 +8,4 @@ project(tinyusb_examples C CXX ASM)
 add_subdirectory(device)
 add_subdirectory(dual)
 add_subdirectory(host)
+add_subdirectory(typec)
