--- a/.github/workflows/build_win_mac.yml
+++ b/.github/workflows/build_win_mac.yml
@@ -48,7 +48,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Get Dependencies
-      run: python3 tools/get_family_deps.py stm32f4
+      run: python3 tools/get_deps.py stm32f4
 
     - name: Build
       run: python3 tools/build_family.py stm32f4 stm32f411disco
