--- a/.github/workflows/build_iar.yml
+++ b/.github/workflows/build_iar.yml
@@ -73,4 +73,4 @@ jobs:
         run: python3 tools/get_deps.py ${{ matrix.family }}
 
       - name: Build
-        run: python3 tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=iccarm
+        run: python3 tools/build_cmake.py ${{ matrix.family }} -DTOOLCHAIN=iar
