update esp32 to also be supported by hil test
test run locally well

--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -32,7 +32,7 @@ jobs:
         # ESP32-S2
         - 'espressif_kaluga_1'
         # ESP32-S3
-        - 'espressif_s3_devkitm'
+        - 'espressif_s3_devkitc'
 
     steps:
     - name: Setup Python
