fix pre-commit typo

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,7 +89,7 @@ jobs:
         upload: false
       id: step1
 
-    # Filter out rules with low severity or high false positve rate
+    # Filter out rules with low severity or high false positive rate
     # Also filter out warnings in third-party code
     - name: Filter out unwanted errors and warnings
       uses: advanced-security/filter-sarif@v1
